# avitoparser

./: README.md  pyproject.toml
core/: avito.py  base.py  export_to.py  extracters.py  utils.py
