[tool.poetry]
name = "avitoparser"
version = "0.1.0"
description = "AvitoParser target direction is Car, but you can use sometime targets"
authors = ["dayvagrant"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
splinter = "^0.16.0"
requests = "^2.26.0"
dateparser = "^1.1.0"
beautifulsoup4 = "^4.10.0"
loguru = "^0.5.3"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
